Adicione um novo parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto aut nemo quisquam. Amet provident reprehenderit perferendis, explicabo molestiae doloribus cum perspiciatis sapiente hic minima asperiores aspernatur dolore, dolorem modi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia voluptates ex autem natus nobis dolorum labore esse deleniti, quibusdam nam tempora, perferendis repellat quia voluptas cum saepe rem et molestias.</p>
 </body>
 </html>
